# sdl2-vala-lazy-foo

02_getting_an_image_on_the_screen/src/: test.vala
03_event_driven_programming/src/: test.vala
04_key_presses/: Makefile.am
04_key_presses/src/: test.vala
05_optimized_surface_loading_and_soft_stretching/: configure.ac
05_optimized_surface_loading_and_soft_stretching/src/: test.vala
06_extension_libraries_and_loading_other_image_formats/src/: test.vala
07_texture_loading_and_rendering/: Makefile.am
07_texture_loading_and_rendering/src/: test.vala
08_geometry_rendering/src/: test.vala
09_the_viewport/src/: test.vala
10_color_keying/src/: test.vala
11_clip_rendering_and_sprite_sheets/src/: test.vala
12_color_modulation/src/: MyTexture.vala  test.vala
13_alpha_blending/src/: MyTexture.vala  test.vala
14_animated_sprites_and_vsync/: configure.ac
14_animated_sprites_and_vsync/src/: test.vala
15_rotation_and_flipping/: Makefile.am
15_rotation_and_flipping/src/: MyTexture.vala  test.vala
16_true_type_fonts/src/: test.vala
17_mouse_events/: Makefile.am
17_mouse_events/src/: MyButton.vala  MyTexture.vala  test.vala
18_key_states/: Makefile.am
18_key_states/src/: test.vala
22_timing/: configure.ac
22_timing/src/: test.vala
